feat: adding swagger to planning methods
